--- a/user/verify.twig
+++ b/user/verify.twig
@@ -3,8 +3,8 @@
 {% block title %}{{ Lang.get('user.email_verification') }}{% endblock %}
 
 {% block breadcrumb %}
-	{{ parent() }}
-	{{ Lang.get('user.email_verification') }}
+	<span class="page-header-breadcrumb-separator">&raquo;</span>
+	<span>{{ Lang.get('user.email_verification') }}</span>
 {% endblock %}
 
 {% block content %}
