--- a/user/change_password.twig
+++ b/user/change_password.twig
@@ -3,7 +3,11 @@
 {% block title %}{{ Lang.get('user.change_password') }}{% endblock %}
 
 {% block breadcrumb %}
-    {{ parent() }}
+    <span class="page-header-breadcrumb-separator">&raquo;</span>
+    <span>{{ Lang.get('user.change_password') }}</span>
+{% endblock %}
+
+{% block page_title %}
     {{ Lang.get('user.change_password') }}
 {% endblock %}
 
@@ -11,9 +15,6 @@
 
     <div style="max-width: 42rem; margin: 0 auto;">
         <div style="background: rgba(31, 41, 55, 0.5); border: 1px solid rgba(168, 85, 247, 0.2); border-radius: 0.5rem; padding: 2rem;">
-            <h2 style="font-size: 1.875rem; font-weight: 600; color: white; margin-bottom: 1.5rem; font-family: var(--font-playfair);">
-                {{ Lang.get('user.change_password') }}
-            </h2>
 
             {{ form_open({'route': 'user.change_password', 'method': 'PUT', 'class': 'validate'}) }}
 
